# Kulyk_goit-homework-09

./: README.md  main.py  telephone_numbers.txt
CLI_bot/: pyproject.toml  requirements.txt
CLI_bot/CLI_bot/: main.py  telephone_numbers.txt
