[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Kulyk-goit-homework-09"
version = "0.0.01"
authors = [
  { name="Kulyk", email="e.kulik.atom@gmail.com" },
]
description = "Names and phone numbers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/evgen-kulik/Kulyk_goit-homework-09"
[project.scripts]
hello = "CLI_bot:main"
